syntax = "proto3";
package cores;

option go_package = "github.com/snple/kokomi/pb/cores;cores";

import "var_message.proto";
import "generic_message.proto";

message ListVarRequest {
    pb.Page page = 1;
    string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ListVarResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Var var = 3;
}

message ViewVarByNameRequest {
    string device_id = 1;
    string name = 2;
}

message CloneVarRequest {
    string id = 1;
    string device_id = 2;
}

message GetVarValueByNameRequest {
    string device_id = 1;
    string name = 2;
}

message VarNameValue {
    string device_id = 1;
    string name = 2;
    string value = 3;
    int64 updated = 4;
}

message PullVarRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string type = 4;
}

message PullVarResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Var var = 3;
}

service VarService {
    rpc Create(pb.Var) returns (pb.Var) {}
    rpc Update(pb.Var) returns (pb.Var) {}
    rpc View(pb.Id) returns (pb.Var) {}
    rpc ViewByName(ViewVarByNameRequest) returns (pb.Var) {}
    rpc ViewByNameFull(pb.Name) returns (pb.Var) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ListVarRequest) returns (ListVarResponse) {}
    rpc Clone(CloneVarRequest) returns (pb.MyBool) {}
    rpc GetValue(pb.Id) returns (pb.VarValue) {}
    rpc SetValue(pb.VarValue) returns (pb.MyBool) {}
    rpc SetValueUnchecked(pb.VarValue) returns (pb.MyBool) {}
    rpc GetValueByName(GetVarValueByNameRequest) returns (VarNameValue) {}
    rpc SetValueByName(VarNameValue) returns (pb.MyBool) {}
    rpc SetValueByNameUnchecked(VarNameValue) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Var) {}
    rpc Pull(PullVarRequest) returns (PullVarResponse) {}
}
